--- a/GlobalEvents/GlobalEvents/Views/Home/MapView.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Home/MapView.cshtml
@@ -2,54 +2,38 @@
     ViewBag.Title = "Mapa";
 }
 
-@*<style>
-    html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-    }
-
-    #map {
-        height: 100%;
-    }
-</style>*@
-
-<div id="map"></div>
+<br />
+<br />
+<div id="map" style="width:100%;height:600px;"></div>
 
 <script>
-    function initMap() {
-      var map = new google.maps.Map(document.getElementById('map'), {
-        zoom: 250000,
-        center: {lat: -25.363882, lng: 131.044922 }
-      });
 
-      var bounds = {
-        north: -25.363882,
-        south: -31.203405,
-        east: 131.044922,
-        west: 125.244141
-      };
+    function initMap() {
+        var map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 16, 
+            center: new google.maps.LatLng(-30.944959, -61.562403),
+            mapTypeId: google.maps.MapTypeId.ROADMAP
+        });
+
 
       // Display the area between the location southWest and northEast.
-      map.fitBounds(bounds);
+      //map.fitBounds(bounds);
 
       // Add 5 markers to map at random locations.
       // For each of these markers, give them a title with their index, and when
       // they are clicked they should open an infowindow with text from a secret
       // message.
-      var secretMessages = ['This', 'is', 'the', 'secret', 'message'];
-      var lngSpan = bounds.east - bounds.west;
-      var latSpan = bounds.north - bounds.south;
-      for (var i = 0; i < secretMessages.length; ++i) {
+      var secretMessages = ['Acá Estoy'];
+      
         var marker = new google.maps.Marker({
           position: {
-            lat: bounds.south + latSpan * Math.random(),
-            lng: bounds.west + lngSpan * Math.random()
+              lat: -30.944959,
+              lng: -61.562403
           },
           map: map
-        });
-        attachSecretMessage(marker, secretMessages[i]);
-      }
+      });
+      attachSecretMessage(marker, secretMessages[0]);
+      
     }
 
     // Attaches an info window to a marker with the provided message. When the
@@ -63,6 +47,8 @@
         infowindow.open(marker.get('map'), marker);
       });
     }
+
+
 
 </script>
 
