--- a/GlobalEvents/GlobalEvents/Views/Home/MapView.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Home/MapView.cshtml
@@ -7,50 +7,51 @@
 <div id="map" style="width:100%;height:600px;"></div>
 
 <script>
+    // Note: This example requires that you consent to location sharing when
+    // prompted by your browser. If you see the error "The Geolocation service
+    // failed.", it means you probably did not give permission for the browser to
+    // locate you.
 
     function initMap() {
         var map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 16, 
-            center: new google.maps.LatLng(-30.944959, -61.562403),
-            mapTypeId: google.maps.MapTypeId.ROADMAP
+            center: { lat: -30.944932, lng: -61.562566 },
+            zoom: 17
         });
+        
 
+        // Try HTML5 geolocation.
+        if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(function (position) {
+                var pos = {
+                    lat: position.coords.latitude,
+                    lng: position.coords.longitude
+                };
 
-      // Display the area between the location southWest and northEast.
-      //map.fitBounds(bounds);
-
-      // Add 5 markers to map at random locations.
-      // For each of these markers, give them a title with their index, and when
-      // they are clicked they should open an infowindow with text from a secret
-      // message.
-      var secretMessages = ['Acá Estoy'];
-      
-        var marker = new google.maps.Marker({
-          position: {
-              lat: -30.944959,
-              lng: -61.562403
-          },
-          map: map
-      });
-      attachSecretMessage(marker, secretMessages[0]);
-      
+                var marker = new google.maps.Marker({
+                    position: pos,
+                    map: map,
+                    title: 'Ubicación encontrada'
+                });
+                map.setCenter(pos);
+            }, function () {
+                handleLocationError(true, infoWindow, map.getCenter());
+            });
+        } else {
+            // Browser doesn't support Geolocation
+            handleLocationError(false, infoWindow, map.getCenter());
+        }
     }
 
-    // Attaches an info window to a marker with the provided message. When the
-    // marker is clicked, the info window will open with the secret message.
-    function attachSecretMessage(marker, secretMessage) {
-      var infowindow = new google.maps.InfoWindow({
-        content: secretMessage
-      });
-
-      marker.addListener('click', function() {
-        infowindow.open(marker.get('map'), marker);
-      });
+    function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+        infoWindow.setPosition(pos);
+        infoWindow.setContent(browserHasGeolocation ?
+            'Error: The Geolocation service failed.' :
+            'Error: Your browser doesn\'t support geolocation.');
     }
-
 
 
 </script>
+
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPHbsGCp8vpDA1vMKAFWsU0Odc8Mz5SAA&callback=initMap" async defer></script>
 
