--- a/GlobalEvents/GlobalEvents/Views/Home/MapView.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Home/MapView.cshtml
@@ -19,7 +19,7 @@
             zoom: 17
         });
 
-        //getEvents(map);
+        var infoWindow = new google.maps.InfoWindow({ map: map });
 
         // Try HTML5 geolocation.
         if (navigator.geolocation) {
