--- a/GlobalEvents/GlobalEvents/Views/Shared/_Layout.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Mapas", "MapView", "Home")</li>
+                    <li>@Html.ActionLink("Mapas", "MapView", "Events")</li>
                 </ul>
             </div>
         </div>
