--- a/GlobalEvents/GlobalEvents/Views/Users/Delete.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Users/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model RepositorioClases.User
+﻿@model RepositorioClases.Users
 
 @{
     ViewBag.Title = "Delete";
@@ -9,7 +9,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>User</h4>
+    <h4>Users</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -37,19 +37,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.DeletedDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DeletedDate)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.IdRol)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.IdRol)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.DeletedDate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.DeletedDate)
         </dd>
 
     </dl>
