--- a/GlobalEvents/GlobalEvents/Views/Users/Index.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Users/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<RepositorioClases.Users>
+﻿@model IEnumerable<ViewModels.ListUserViewModel>
 
 @{
     ViewBag.Title = "Index";
@@ -22,11 +22,9 @@
             @Html.DisplayNameFor(model => model.Password)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.IdRol)
+            @Html.DisplayNameFor(model => model.Rol)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DeletedDate)
-        </th>
+
         <th></th>
     </tr>
 
@@ -42,11 +40,9 @@
             @Html.DisplayFor(modelItem => item.Password)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.IdRol)
+            @Html.DisplayFor(modelItem => item.Rol)
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DeletedDate)
-        </td>
+
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
