Actualizacion vista Delete y nuevos cambios con autenticación de usuarios y controles.

--- a/GlobalEvents/GlobalEvents/Views/Shared/Error.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Shared/Error.cshtml
@@ -8,7 +8,8 @@
 <body>
     <hgroup>
         <h1>Error.</h1>
-        <h2>Error al procesar la solicitud.</h2>
+        <h2>Al procesar la solicitud, intente nuevamente iniciando desde la página principal.</h2>
+        Comuniquese con un administrador de GlobalEvents si el error continua.
     </hgroup>
 </body>
 </html>
