Cambios para primera entrega. - Faltan opciones de cambiar contraseña. - Ver bien el retorno de página anterior una vez logueado.

--- a/GlobalEvents/GlobalEvents/Views/Home/Login.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Home/Login.cshtml
@@ -9,19 +9,19 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
         <div class="col-sm-auto col-md-auto col-md-offset-1">
-            <h1 class="text-center login-title">Ingresa</h1>
+            <h2 class="text-left login-title">Ingresa tus datos</h2>
             <div class="account-wall">
                     <input type="text" name="Email" class="form-control" placeholder="Email" required autofocus>
                     <input type="password" name="Password" class="form-control" placeholder="Contraseña" required>
                     <button class="btn btn-lg btn-primary btn-block" type="submit">
                         Ingresar
                     </button>
-                    <label class="checkbox">
-                        <input type="checkbox" value="remember-me">
+                    <!--<label class="checkbox">
+                        <input type="checkbox" value="remember-me" name="Recordarme">
                         Recordarme
-                    </label>
+                    </label>-->
             </div>
-            <a href="#" class="text-center new-account">Crearse una cuenta</a> | 
+            @Html.ActionLink("Crearse una cuenta", "Create", "Users") | 
             <a href="#" class="pull-right need-help">¿Necesita ayuda?</a><span class="clearfix"></span>
         </div>
 }
