--- a/GlobalEvents/GlobalEvents/Views/Users/Delete.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Users/Delete.cshtml
@@ -1,11 +1,9 @@
 ﻿@model RepositorioClases.Users
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Eliminar usuario";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Eliminar</h2>
 
 <h3>¿Esta seguro que desea eliminar este usuario?</h3>
 <div>
