--- a/GlobalEvents/GlobalEvents/Views/Users/Edit.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Users/Edit.cshtml
@@ -10,7 +10,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -48,7 +48,6 @@
             </div>
         </div>
 
-
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Guardar" class="btn btn-default" />
@@ -56,7 +55,7 @@
         </div>
     </div>
 }
-
 <div>
+    <!--Html.ActionLink("Cambiar contraseña", "ChangePassword", "Users", new { Id = Model.Id }) | -->
     @Html.ActionLink("Volver a usuarios", "Index")
 </div>
