--- a/GlobalEvents/GlobalEvents/Views/Users/_CreateOrEdit.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Users/_CreateOrEdit.cshtml
@@ -8,6 +8,9 @@
 <div class="editor-field">
     @Html.EditorFor(model => model.Email)
     @Html.ValidationMessageFor(model => model.Email)
+    <!--<small id="passwordHelpInline" class="text-muted">
+        Must be 8-20 characters long.
+    </small>-->
 </div>
 
 <div class="editor-label">
