--- a/GlobalEvents/GlobalEvents/Views/Users/Create.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Users/Create.cshtml
@@ -82,7 +82,7 @@
 
         @Html.Partial("_CreateOrEdit", Model)
 
-        <button class="btn btn-outline-success" type="submit">
+        <button class="btn btn-primary" type="submit">
             Crear
         </button>
     </fieldset>
