--- a/GlobalEvents/GlobalEvents/Views/Users/ChangePassword.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Users/ChangePassword.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Cambiar contraseña</h2>
 
-@using (Html.BeginForm("ChangePasswordConfirmed", "Users"))
+@using (Html.BeginForm("ChangePassword", "Users"))
 {
     @Html.AntiForgeryToken()
 
