--- a/GlobalEvents/GlobalEvents/Views/Home/Login.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Home/Login.cshtml
@@ -1,29 +1,42 @@
-﻿
+﻿@model ViewModels.LoginModel
 @{
     ViewBag.Title = "Login";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<div class="container m-auto">
+<h2>Logearse</h2>
 @using (Html.BeginForm("Login", "Home", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "bootstrap-admin-login-form" }))
 {
     @Html.AntiForgeryToken()
-    @Html.ValidationSummary(false, "Errores:", new { @class = "alert alert-danger" })
 
-        <div class="col-sm-auto col-md-auto col-md-offset-1">
-            <h2 class="text-left login-title">Ingresa tus datos</h2>
-            <div class="account-wall form-group">
-                    <input type="text" name="Email" class="form-control" placeholder="Email" required autofocus>
-                    <input type="password" name="Password" class="form-control" placeholder="Contraseña" required>
-                    <button class="btn btn-lg btn-primary btn-block" type="submit">
-                        Ingresar
-                    </button>
-                    <!--<label class="checkbox">
-                        <input type="checkbox" value="remember-me" name="Recordarme">
-                        Recordarme
-                    </label>-->
+    <div class="form-horizontal">
+        <hr />
+        @Html.ValidationSummary(false, "Errores:", new { @class = "alert alert-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
             </div>
-            @Html.ActionLink("Crearse una cuenta", "Create", "Users") | 
-            <a href="#" class="pull-right need-help">¿Necesita ayuda?</a><span class="clearfix"></span>
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                <!--@Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" }) -->
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-10">
+                @Html.CheckBox("Recordarme", false, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.LabelFor(model => model.Recordarme, htmlAttributes: new { @class = "control-label col-md-2" })
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Ingresar" class="btn btn-primary" />
+            </div>
+        </div>
+    </div>
 }
+<div>
+    @Html.ActionLink("¿Necesita ayuda?", "Index")
 </div>
