Cambios en alerts
Ver si no se muestran ventanas de alerta en página.

--- a/GlobalEvents/GlobalEvents/Content/bootstrap-reboot.css
+++ b/GlobalEvents/GlobalEvents/Content/bootstrap-reboot.css
@@ -14,6 +14,10 @@ body {
     display: none;
 }
 
+validation-summary-valid alert alert-danger {
+    display: none;
+}
+
 article,
 aside,
 footer,
