--- a/GlobalEvents/GlobalEvents/Views/Users/ChangePassword.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Users/ChangePassword.cshtml
@@ -12,7 +12,7 @@
 
     <div class="form-horizontal">
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.ValidationSummary(false, "Errores:", new { @class = "alert alert-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Usuario, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -23,21 +23,21 @@
             @Html.LabelFor(model => model.actualPassword, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.actualPassword, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.actualPassword, "", new { @class = "text-danger" })
+                <!--@Html.ValidationMessageFor(model => model.actualPassword, "", new { @class = "text-danger" }) -->
             </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.newPassword, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.newPassword, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.newPassword, "", new { @class = "text-danger" })
+                <!--@Html.ValidationMessageFor(model => model.newPassword, "", new { @class = "text-danger" }) Para mostrar el mensaje de validaciòn debajo de la casilla-->
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.repeatPassword, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.repeatPassword, htmlAttributes: new { @class = "control-label col-md" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.repeatPassword, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.repeatPassword, "", new { @class = "text-danger" })
+                <!--@Html.ValidationMessageFor(model => model.repeatPassword, "", new { @class = "text-danger" })-->
             </div>
         </div>
         <div class="form-group">
@@ -47,3 +47,6 @@
         </div>
     </div>
 }
+<div>
+    @Html.ActionLink("Volver a usuarios", "Index")
+</div>
