--- a/GlobalEvents/GlobalEvents/Content/bootstrap.css
+++ b/GlobalEvents/GlobalEvents/Content/bootstrap.css
@@ -20,7 +20,7 @@ body {
     display: none;
 }
 
-validation-summary-valid alert alert-danger {
+validation-summary-valid.alert.alert-danger {
     display: none;
 }
 
