--- a/GlobalEvents/GlobalEvents/Views/Shared/_Layout.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Shared/_Layout.cshtml
@@ -44,20 +44,19 @@
                         <a class="nav-link disabled" href="#">Usuarios</a>
                     }
                 </li>
+            </ul>
+            <ul class="nav justify-content-end">
                 <li class="nav-item">
-                    @if (WebSecurity.IsAuthenticated)
-                    {
-                        @Html.ActionLink("Desconectarse", "Logout", "Home", new { returnURL = HttpContext.Current.Request.Url.AbsolutePath }, new { @class = "nav-link" })
-                    }
-                    else
-                    {
-                        @Html.ActionLink("Iniciar sesión", "Login", "Home", new { returnURL = HttpContext.Current.Request.Url.AbsolutePath }, new { @class = "nav-link" })
-                    }
+                @if (WebSecurity.IsAuthenticated)
+                {
+                    @Html.ActionLink("Desconectarse", "Logout", "Home", new { returnURL = HttpContext.Current.Request.Url.AbsolutePath }, new { @class = "nav-link" })
+                }
+                else
+                {
+                    @Html.ActionLink("Iniciar sesión", "Login", "Home", new { returnURL = HttpContext.Current.Request.Url.AbsolutePath }, new { @class = "nav-link" })
+                }
                 </li>
             </ul>
-            <span class="navbar-text">
-                Busca tus eventos más cercanos!
-            </span>
         </div>
     </nav>
     <div class="container body-content">
