Botón Crearse cuenta
Se agregó el boton para crear una cuenta que en el rediseño se quito

--- a/GlobalEvents/GlobalEvents/Views/Home/Login.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Home/Login.cshtml
@@ -38,5 +38,6 @@
     </div>
 }
 <div>
-    @Html.ActionLink("¿Necesita ayuda?", "Index")
+    @Html.ActionLink("Crearse una cuenta", "Create", "Users") |
+    <a href="#" class="pull-right need-help">¿Necesita ayuda?</a><span class="clearfix"></span>
 </div>
