--- a/GlobalEvents/GlobalEvents/Views/Users/Delete.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Users/Delete.cshtml
@@ -5,49 +5,66 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h3>¿Esta seguro que desea eliminar este usuario?</h3>
-<div>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd>
+<h4>¿Esta seguro que desea eliminar este usuario?</h4>
+<div class="form-group row">
+    <label class="col-sm-2 col-form-label">
+        @Html.DisplayNameFor(model => model.Id)
+    </label>
+    <div class="col-sm-10">
+        <p class="form-control-static">
             @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Usuario)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Usuario)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Nombre)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Nombre)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Apellido)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Apellido)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-    </dl>
+        </p>
+    </div>
 
-    @using (Html.BeginForm()) {
+    <label class="col-sm-2 col-form-label">
+        @Html.DisplayNameFor(model => model.Usuario)
+    </label>
+    <div class="col-sm-10">
+        <p class="form-control-static">
+            @Html.DisplayFor(model => model.Usuario)
+        </p>
+    </div>
+
+    @if (Model.Nombre != null)
+    {
+        <label class="col-sm-2 col-form-label">
+            @Html.DisplayNameFor(model => model.Nombre)
+        </label>
+            <div class="col-sm-10">
+                <p class="form-control-static">
+                    @Html.DisplayFor(model => model.Nombre)
+                </p>
+            </div>
+    }
+
+    @if (Model.Apellido != null)
+    {
+        <label class="col-sm-2 col-form-label">
+            @Html.DisplayNameFor(model => model.Apellido)
+        </label>
+            <div class="col-sm-10">
+                <p class="form-control-static">
+                    @Html.DisplayFor(model => model.Apellido)
+                </p>
+            </div>
+    }
+
+    <label class="col-sm-2 col-form-label">
+        @Html.DisplayNameFor(model => model.Email)
+    </label>
+    <div class="col-sm-10">
+        <p class="form-control-static">
+            @Html.DisplayFor(model => model.Email)
+        </p>
+    </div>
+
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
+        <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Eliminar" class="btn btn-primary" />
         </div>
     }
-
-    <div>@Html.ActionLink("Volver a usuarios", "Index")</div>
 </div>
+<div>@Html.ActionLink("Volver a usuarios", "Index")</div>
