Mejora vista login
Se mejoró la vista de logeuo, se elimino clase parcial, se pide
re-ingrese contraseña al crear.

--- a/GlobalEvents/GlobalEvents/Views/Users/Create.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Users/Create.cshtml
@@ -1,27 +1,14 @@
-﻿@*@model RepositorioClases.Users
+﻿@model ViewModels.CreateUserModel
 
 @{
-    ViewBag.Title = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Crear usuario";
 }
 
-<h2>Create</h2>
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Users</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-            </div>
-        </div>
+    @Html.ValidationSummary(false, "Errores:", new { @class = "alert alert-danger" })
+    <fieldset>
+        <legend>Crear usuario</legend>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -30,7 +17,7 @@
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        
         <div class="form-group">
             @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -40,52 +27,19 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.IdRol, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.repeatPassword, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.IdRol, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.IdRol, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.DeletedDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DeletedDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DeletedDate, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.repeatPassword, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.repeatPassword, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
             </div>
         </div>
-    </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>*@
-@model ViewModels.UserViewModel
-
-@{
-    ViewBag.Title = "Crear usuario";
-}
-
-<h2>Crear</h2>
-
-@using (Html.BeginForm())
-{
-    @Html.ValidationSummary(false, "Errores:", new { @class = "alert alert-danger" })
-    <fieldset>
-        <legend>Usuario</legend>
-
-        @Html.Partial("_CreateOrEdit", Model)
-
-        <button class="btn btn-primary" type="submit">
-            Crear
-        </button>
-    </fieldset>
+</fieldset>
 }
 
 @if (WebSecurity.IsAuthenticated)
