--- a/GlobalEvents/GlobalEvents/Content/bootstrap-reboot.css
+++ b/GlobalEvents/GlobalEvents/Content/bootstrap-reboot.css
@@ -14,6 +14,11 @@ body {
     display: none;
 }
 
+.navbar-custom {
+    color: #CC3333;
+    background-color: #CC3333;
+}
+
 article,
 aside,
 footer,
