Agregado iconos, clases css y demás

--- a/GlobalEvents/GlobalEvents/Views/Home/Index.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Home/Index.cshtml
@@ -37,9 +37,19 @@
             <p class="card-text">Información de evento.</p>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">Fecha</li>
-            <li class="list-group-item">Ubicación</li>
-            <li class="list-group-item">Evento</li>
+            <li class="list-group-item">
+                <i class="fa fa-calendar fa-fw"></i>
+                Fecha
+            </li>
+            <li class="list-group-item">
+                <i class="fa fa-clock-o fa-fw"></i>
+                Hora
+            </li>
+
+            <li class="list-group-item">
+                <i class="fa fa-map-marker fa-fw"></i>
+                Ubicación
+            </li>
         </ul>
         <div class="card-block">
             <a href="#" class="card-link">Ver evento</a>
@@ -52,9 +62,19 @@
             <p class="card-text">Información de evento.</p>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">Fecha</li>
-            <li class="list-group-item">Ubicación</li>
-            <li class="list-group-item">Evento</li>
+            <li class="list-group-item">
+                <i class="fa fa-calendar fa-fw"></i>
+                Fecha
+            </li>
+            <li class="list-group-item">
+                <i class="fa fa-clock-o fa-fw"></i>
+                Hora
+            </li>
+
+            <li class="list-group-item">
+                <i class="fa fa-map-marker fa-fw"></i>
+                Ubicación
+            </li>
         </ul>
         <div class="card-block">
             <a href="#" class="card-link">Ver evento</a>
@@ -67,14 +87,18 @@
             <p class="card-text">Información de evento.</p>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">Fecha</li>
             <li class="list-group-item">
-                <span class="glyphicon glyphicon-star"></span>
-                <i class="glyphicon glyphicon-map-marker"></i>
+                <i class="fa fa-calendar fa-fw"></i>
+            Fecha
+            </li>
+            <li class="list-group-item">
+                <i class="fa fa-clock-o fa-fw"></i>
                 Hora
             </li>
             
-            <li class="list-group-item">Ubicación</li>
+            <li class="list-group-item">
+                <i class="fa fa-map-marker fa-fw"></i>
+            Ubicación</li>
         </ul>
         <div class="card-block">
             <a href="#" class="card-link">Ver evento</a>
