--- a/GlobalEvents/GlobalEvents/Views/Shared/_Layout.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Shared/_Layout.cshtml
@@ -63,28 +63,25 @@
     {
         <ul class="nav nav-pills nav-fill" style="background-color: #f5f3f3;">
             <li class="nav-item">
-                <a class="nav-link active" href="#">Destacados</a>
+                <a class="nav-link active" href="#"><i class="fa fa-star-o fa-fw"></i>Destacados</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Música</a>
+                <a class="nav-link" href="#"><i class="fa fa-music fa-fw"></i>Música</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Fiestas</a>
+                <a class="nav-link" href="#"><i class="fa fa-beer fa-fw"></i>Fiestas</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Artes</a>
+                <a class="nav-link" href="#"><i class="fa fa-picture-o fa-fw"></i>Artes</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Gastronomía</a>
+                <a class="nav-link" href="#"><i class="fa fa-cutlery fa-fw"></i>Gastronomía</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Clases</a>
+                <a class="nav-link" href="#"><i class="fa fa-graduation-cap fa-fw"></i>Clases</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Deportes y bienestar</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Networking</a>
+                <a class="nav-link" href="#"><i class="fa fa-futbol-o fa-fw"></i>Deportes y bienestar</a>
             </li>
         </ul>
     }
