--- a/GlobalEvents/GlobalEvents/Views/Home/Index.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Home/Index.cshtml
@@ -89,19 +89,140 @@
         <ul class="list-group list-group-flush">
             <li class="list-group-item">
                 <i class="fa fa-calendar fa-fw"></i>
-            Fecha
+                Fecha
             </li>
             <li class="list-group-item">
                 <i class="fa fa-clock-o fa-fw"></i>
                 Hora
             </li>
-            
+
             <li class="list-group-item">
                 <i class="fa fa-map-marker fa-fw"></i>
-            Ubicación</li>
+                Ubicación
+            </li>
         </ul>
         <div class="card-block">
             <a href="#" class="card-link">Ver evento</a>
         </div>
+    </div>
+</div>
+
+<div class="card-deck">
+    <div class="card card-cascade narrower">
+
+        <!--Card image-->
+        <div class="view overlay hm-white-slight">
+            <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%2813%29.jpg" class="img-fluid" alt="">
+            <a>
+                <div class="mask waves-effect waves-light"></div>
+            </a>
+        </div>
+        <!--/.Card image-->
+        <!--Card content-->
+        <div class="card-block">
+            <h5 class="red-text"><i class="fa fa-futbol-o"></i> Deporte</h5>
+            <!--Title-->
+            <h4 class="card-title">Evento 1</h4>
+            <!--Text-->
+            <p class="card-text">Información de evento.</p>
+
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                    <i class="fa fa-calendar fa-fw"></i>
+                    Fecha
+                </li>
+                <li class="list-group-item">
+                    <i class="fa fa-clock-o fa-fw"></i>
+                    Hora
+                </li>
+
+                <li class="list-group-item">
+                    <i class="fa fa-map-marker fa-fw"></i>
+                    Ubicación
+                </li>
+            </ul>
+
+            <a class="btn btn-primary">Ver evento</a>
+        </div>
+        <!--/.Card content-->
+
+    </div>
+    <div class="card card-cascade narrower">
+
+        <!--Card image-->
+        <div class="view overlay hm-white-slight">
+            <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%2840%29.jpg" class="img-fluid" alt="">
+            <a>
+                <div class="mask waves-effect waves-light"></div>
+            </a>
+        </div>
+        <!--/.Card image-->
+        <!--Card content-->
+        <div class="card-block">
+            <h5 class="blue-text"><i class="fa fa-music"></i> Música</h5>
+            <!--Title-->
+            <h4 class="card-title">Evento 2</h4>
+            <!--Text-->
+            <p class="card-text">Información de evento.</p>
+
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                    <i class="fa fa-calendar fa-fw"></i>
+                    Fecha
+                </li>
+                <li class="list-group-item">
+                    <i class="fa fa-clock-o fa-fw"></i>
+                    Hora
+                </li>
+
+                <li class="list-group-item">
+                    <i class="fa fa-map-marker fa-fw"></i>
+                    Ubicación
+                </li>
+            </ul>
+
+            <a class="btn btn-primary">Ver evento</a>
+        </div>
+        <!--/.Card content-->
+
+    </div>
+    <div class="card card-cascade narrower">
+
+        <!--Card image-->
+        <div class="view overlay hm-white-slight">
+            <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%2842%29.jpg" class="img-fluid" alt="">
+            <a>
+                <div class="mask waves-effect waves-light"></div>
+            </a>
+        </div>
+        <!--/.Card image-->
+        <!--Card content-->
+        <div class="card-block">
+            <h5 class="green-text"><i class="fa fa-picture-o"></i> Arte</h5>
+            <!--Title-->
+            <h4 class="card-title">Evento 3</h4>
+            <!--Text-->
+            <p class="card-text">Información de evento.</p>
+
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                    <i class="fa fa-calendar fa-fw"></i>
+                    Fecha
+                </li>
+                <li class="list-group-item">
+                    <i class="fa fa-clock-o fa-fw"></i>
+                    Hora
+                </li>
+
+                <li class="list-group-item">
+                    <i class="fa fa-map-marker fa-fw"></i>
+                    Ubicación
+                </li>
+            </ul>
+
+            <a class="btn btn-primary">Ver evento</a>
+        </div>
+        <!--/.Card content-->
+
     </div>
 </div>
